--- a/indox.html
+++ b/indox.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Failed 1st time</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Failed 1st time</h1>
